tests/sksl/errors/golden/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 1: function 'foo' can exit without returning a value
1 error
